--- a/build.xml
+++ b/build.xml
@@ -6,13 +6,13 @@
 <property name="classes.dir" location="${build.dir}/classes" />
 <property name="web_content.dir" location="WebContent" />
 <property name="lib.dir" location="${web_content.dir}/WEB-INF/lib" />
+<property name="war.file.name" value="${project.name}.war" />
 
 
-<path id="compile.classpath">
-<fileset dir="${lib.dir}">
-<include name="*.jar" />
-</fileset>
-</path>
+	<path id="classpath">
+	        <fileset dir="${lib.dir}" includes="**/*.jar"/>
+	    </path>
+
 	
 <target name="init">
 <mkdir dir="${classes.dir}" />
@@ -24,13 +24,12 @@
 
 
 <target name="compile" depends="clean, init">
-<javac srcdir="${src.dir}" destdir="${classes.dir}"> 
-	<classpath refid="${lib.dir}\servlet-api.jar" />
-</javac>
+<javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath"/>
 </target>
 
-<target name="war" depends="compile">	
-<war destfile="${build.dir}" webxml="${web_content.dir}/WEB-INF/web.xml">
+<target name="war" depends="compile">
+	
+<war destfile="${build.dir}/${war.file.name}" webxml="${web_content.dir}/WEB-INF/web.xml">
 <classes dir="${classes.dir}" />
 <fileset dir="${web_content.dir}" excludes="**\servlet-api.jar" />
 </war>
