--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" ?>
 <project name="Piir1">
 
+<property name="project.name" value="${ant.project.name}" />
 <property name="src.dir" location="src" />
 <property name="build.dir" location="build" />
 <property name="classes.dir" location="${build.dir}/classes" />
 <property name="web_content.dir" location="WebContent" />
 <property name="lib.dir" location="${web_content.dir}/WEB-INF/lib" />
-<property name="war.file.name" value="${project.name}.war" />
+<property name="war.file.name" value="Piir1.war" />
+	
 
 
 	<path id="classpath">
