--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
 <property name="build.dir" location="build" />
 <property name="classes.dir" location="${build.dir}/classes" />
 <property name="web_content.dir" location="WebContent" />
-<property name="lib.dir" location="${web_content.dir}/WEB-INF/lib" />
+<property name="lib.dir" location="lib" />
 <property name="war.file.name" value="Piir1.war" />
 	
 
